Fixes navigation on smaller screens (not xs, though).  Removes extra spacing around footer.

--- a/frontend/static/css/hoaxy_styles.css
+++ b/frontend/static/css/hoaxy_styles.css
@@ -494,7 +494,8 @@ footer
 {
 	background: #144073;
 	color: white;
-	padding: 2rem 0;
+	padding: 1rem 0;
+    margin-top: 0;
 }
 footer a
 {
